light_clone/tests/ui/generic_string.stderr
error[E0277]: the trait bound `String: LightClone` is not satisfied
  --> tests/ui/generic_string.rs:10:13
   |
10 |     let _c: Container<String> = Container {
   |             ^^^^^^^^^^^^^^^^^ the trait `LightClone` is not implemented for `String`
   |
   = help: the following other types implement trait `LightClone`:
             &T
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
             (A, B, C, D, E, F, G)
           and $N others
note: required by a bound in `Container`
  --> tests/ui/generic_string.rs:4:29
   |
 4 | struct Container<T: Clone + LightClone> {
   |                             ^^^^^^^^^^ required by this bound in `Container`

error[E0277]: the trait bound `String: LightClone` is not satisfied
  --> tests/ui/generic_string.rs:11:16
   |
11 |         value: String::from("hello"),
   |                ^^^^^^^^^^^^^^^^^^^^^ the trait `LightClone` is not implemented for `String`
   |
   = help: the following other types implement trait `LightClone`:
             &T
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
             (A, B, C, D, E, F, G)
           and $N others
note: required by a bound in `Container`
  --> tests/ui/generic_string.rs:4:29
   |
 4 | struct Container<T: Clone + LightClone> {
   |                             ^^^^^^^^^^ required by this bound in `Container`
